# serializer version: 1
# name: test_fetch_price_historical
  list([
    dict({
      'currency': 'EUR',
      'datetime': datetime.datetime(2022, 7, 15, 0, 0, tzinfo=datetime.timezone.utc),
      'end_datetime': None,
      'price': 370.99,
      'source': 'rte-france.com',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'zoneKey': 'GB',
    }),
    dict({
      'currency': 'EUR',
      'datetime': datetime.datetime(2022, 7, 15, 1, 0, tzinfo=datetime.timezone.utc),
      'end_datetime': None,
      'price': 335.11,
      'source': 'rte-france.com',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'zoneKey': 'GB',
    }),
    dict({
      'currency': 'EUR',
      'datetime': datetime.datetime(2022, 7, 15, 2, 0, tzinfo=datetime.timezone.utc),
      'end_datetime': None,
      'price': 299.45,
      'source': 'rte-france.com',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'zoneKey': 'GB',
    }),
    dict({
      'currency': 'EUR',
      'datetime': datetime.datetime(2022, 7, 15, 3, 0, tzinfo=datetime.timezone.utc),
      'end_datetime': None,
      'price': 280.51,
      'source': 'rte-france.com',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'zoneKey': 'GB',
    }),
    dict({
      'currency': 'EUR',
      'datetime': datetime.datetime(2022, 7, 15, 4, 0, tzinfo=datetime.timezone.utc),
      'end_datetime': None,
      'price': 242.15,
      'source': 'rte-france.com',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'zoneKey': 'GB',
    }),
    dict({
      'currency': 'EUR',
      'datetime': datetime.datetime(2022, 7, 15, 5, 0, tzinfo=datetime.timezone.utc),
      'end_datetime': None,
      'price': 242.62,
      'source': 'rte-france.com',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'zoneKey': 'GB',
    }),
    dict({
      'currency': 'EUR',
      'datetime': datetime.datetime(2022, 7, 15, 6, 0, tzinfo=datetime.timezone.utc),
      'end_datetime': None,
      'price': 262.98,
      'source': 'rte-france.com',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'zoneKey': 'GB',
    }),
    dict({
      'currency': 'EUR',
      'datetime': datetime.datetime(2022, 7, 15, 7, 0, tzinfo=datetime.timezone.utc),
      'end_datetime': None,
      'price': 336.87,
      'source': 'rte-france.com',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'zoneKey': 'GB',
    }),
    dict({
      'currency': 'EUR',
      'datetime': datetime.datetime(2022, 7, 15, 8, 0, tzinfo=datetime.timezone.utc),
      'end_datetime': None,
      'price': 381.58,
      'source': 'rte-france.com',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'zoneKey': 'GB',
    }),
    dict({
      'currency': 'EUR',
      'datetime': datetime.datetime(2022, 7, 15, 9, 0, tzinfo=datetime.timezone.utc),
      'end_datetime': None,
      'price': 367.58,
      'source': 'rte-france.com',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'zoneKey': 'GB',
    }),
    dict({
      'currency': 'EUR',
      'datetime': datetime.datetime(2022, 7, 15, 10, 0, tzinfo=datetime.timezone.utc),
      'end_datetime': None,
      'price': 329.34,
      'source': 'rte-france.com',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'zoneKey': 'GB',
    }),
    dict({
      'currency': 'EUR',
      'datetime': datetime.datetime(2022, 7, 15, 11, 0, tzinfo=datetime.timezone.utc),
      'end_datetime': None,
      'price': 305.93,
      'source': 'rte-france.com',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'zoneKey': 'GB',
    }),
    dict({
      'currency': 'EUR',
      'datetime': datetime.datetime(2022, 7, 15, 12, 0, tzinfo=datetime.timezone.utc),
      'end_datetime': None,
      'price': 288.28,
      'source': 'rte-france.com',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'zoneKey': 'GB',
    }),
    dict({
      'currency': 'EUR',
      'datetime': datetime.datetime(2022, 7, 15, 13, 0, tzinfo=datetime.timezone.utc),
      'end_datetime': None,
      'price': 270.63,
      'source': 'rte-france.com',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'zoneKey': 'GB',
    }),
    dict({
      'currency': 'EUR',
      'datetime': datetime.datetime(2022, 7, 15, 14, 0, tzinfo=datetime.timezone.utc),
      'end_datetime': None,
      'price': 246.27,
      'source': 'rte-france.com',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'zoneKey': 'GB',
    }),
    dict({
      'currency': 'EUR',
      'datetime': datetime.datetime(2022, 7, 15, 15, 0, tzinfo=datetime.timezone.utc),
      'end_datetime': None,
      'price': 237.68,
      'source': 'rte-france.com',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'zoneKey': 'GB',
    }),
    dict({
      'currency': 'EUR',
      'datetime': datetime.datetime(2022, 7, 15, 16, 0, tzinfo=datetime.timezone.utc),
      'end_datetime': None,
      'price': 243.56,
      'source': 'rte-france.com',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'zoneKey': 'GB',
    }),
    dict({
      'currency': 'EUR',
      'datetime': datetime.datetime(2022, 7, 15, 17, 0, tzinfo=datetime.timezone.utc),
      'end_datetime': None,
      'price': 301.34,
      'source': 'rte-france.com',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'zoneKey': 'GB',
    }),
    dict({
      'currency': 'EUR',
      'datetime': datetime.datetime(2022, 7, 15, 18, 0, tzinfo=datetime.timezone.utc),
      'end_datetime': None,
      'price': 331.81,
      'source': 'rte-france.com',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'zoneKey': 'GB',
    }),
    dict({
      'currency': 'EUR',
      'datetime': datetime.datetime(2022, 7, 15, 19, 0, tzinfo=datetime.timezone.utc),
      'end_datetime': None,
      'price': 377.7,
      'source': 'rte-france.com',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'zoneKey': 'GB',
    }),
    dict({
      'currency': 'EUR',
      'datetime': datetime.datetime(2022, 7, 15, 20, 0, tzinfo=datetime.timezone.utc),
      'end_datetime': None,
      'price': 405.7,
      'source': 'rte-france.com',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'zoneKey': 'GB',
    }),
    dict({
      'currency': 'EUR',
      'datetime': datetime.datetime(2022, 7, 15, 21, 0, tzinfo=datetime.timezone.utc),
      'end_datetime': None,
      'price': 410.29,
      'source': 'rte-france.com',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'zoneKey': 'GB',
    }),
    dict({
      'currency': 'EUR',
      'datetime': datetime.datetime(2022, 7, 15, 22, 0, tzinfo=datetime.timezone.utc),
      'end_datetime': None,
      'price': 394.29,
      'source': 'rte-france.com',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'zoneKey': 'GB',
    }),
    dict({
      'currency': 'EUR',
      'datetime': datetime.datetime(2022, 7, 15, 23, 0, tzinfo=datetime.timezone.utc),
      'end_datetime': None,
      'price': 366.11,
      'source': 'rte-france.com',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'zoneKey': 'GB',
    }),
    dict({
      'currency': 'EUR',
      'datetime': datetime.datetime(2022, 7, 16, 0, 0, tzinfo=datetime.timezone.utc),
      'end_datetime': None,
      'price': 277.69,
      'source': 'rte-france.com',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'zoneKey': 'GB',
    }),
    dict({
      'currency': 'EUR',
      'datetime': datetime.datetime(2022, 7, 16, 1, 0, tzinfo=datetime.timezone.utc),
      'end_datetime': None,
      'price': 247.09,
      'source': 'rte-france.com',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'zoneKey': 'GB',
    }),
    dict({
      'currency': 'EUR',
      'datetime': datetime.datetime(2022, 7, 16, 2, 0, tzinfo=datetime.timezone.utc),
      'end_datetime': None,
      'price': 245.92,
      'source': 'rte-france.com',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'zoneKey': 'GB',
    }),
    dict({
      'currency': 'EUR',
      'datetime': datetime.datetime(2022, 7, 16, 3, 0, tzinfo=datetime.timezone.utc),
      'end_datetime': None,
      'price': 242.62,
      'source': 'rte-france.com',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'zoneKey': 'GB',
    }),
    dict({
      'currency': 'EUR',
      'datetime': datetime.datetime(2022, 7, 16, 4, 0, tzinfo=datetime.timezone.utc),
      'end_datetime': None,
      'price': 241.92,
      'source': 'rte-france.com',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'zoneKey': 'GB',
    }),
    dict({
      'currency': 'EUR',
      'datetime': datetime.datetime(2022, 7, 16, 5, 0, tzinfo=datetime.timezone.utc),
      'end_datetime': None,
      'price': 237.68,
      'source': 'rte-france.com',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'zoneKey': 'GB',
    }),
    dict({
      'currency': 'EUR',
      'datetime': datetime.datetime(2022, 7, 16, 6, 0, tzinfo=datetime.timezone.utc),
      'end_datetime': None,
      'price': 233.21,
      'source': 'rte-france.com',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'zoneKey': 'GB',
    }),
    dict({
      'currency': 'EUR',
      'datetime': datetime.datetime(2022, 7, 16, 7, 0, tzinfo=datetime.timezone.utc),
      'end_datetime': None,
      'price': 231.8,
      'source': 'rte-france.com',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'zoneKey': 'GB',
    }),
    dict({
      'currency': 'EUR',
      'datetime': datetime.datetime(2022, 7, 16, 8, 0, tzinfo=datetime.timezone.utc),
      'end_datetime': None,
      'price': 237.68,
      'source': 'rte-france.com',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'zoneKey': 'GB',
    }),
    dict({
      'currency': 'EUR',
      'datetime': datetime.datetime(2022, 7, 16, 9, 0, tzinfo=datetime.timezone.utc),
      'end_datetime': None,
      'price': 249.45,
      'source': 'rte-france.com',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'zoneKey': 'GB',
    }),
    dict({
      'currency': 'EUR',
      'datetime': datetime.datetime(2022, 7, 16, 10, 0, tzinfo=datetime.timezone.utc),
      'end_datetime': None,
      'price': 248.33,
      'source': 'rte-france.com',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'zoneKey': 'GB',
    }),
    dict({
      'currency': 'EUR',
      'datetime': datetime.datetime(2022, 7, 16, 11, 0, tzinfo=datetime.timezone.utc),
      'end_datetime': None,
      'price': 243.21,
      'source': 'rte-france.com',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'zoneKey': 'GB',
    }),
    dict({
      'currency': 'EUR',
      'datetime': datetime.datetime(2022, 7, 16, 12, 0, tzinfo=datetime.timezone.utc),
      'end_datetime': None,
      'price': 235.33,
      'source': 'rte-france.com',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'zoneKey': 'GB',
    }),
    dict({
      'currency': 'EUR',
      'datetime': datetime.datetime(2022, 7, 16, 13, 0, tzinfo=datetime.timezone.utc),
      'end_datetime': None,
      'price': 217.44,
      'source': 'rte-france.com',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'zoneKey': 'GB',
    }),
    dict({
      'currency': 'EUR',
      'datetime': datetime.datetime(2022, 7, 16, 14, 0, tzinfo=datetime.timezone.utc),
      'end_datetime': None,
      'price': 194.15,
      'source': 'rte-france.com',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'zoneKey': 'GB',
    }),
    dict({
      'currency': 'EUR',
      'datetime': datetime.datetime(2022, 7, 16, 15, 0, tzinfo=datetime.timezone.utc),
      'end_datetime': None,
      'price': 185.91,
      'source': 'rte-france.com',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'zoneKey': 'GB',
    }),
    dict({
      'currency': 'EUR',
      'datetime': datetime.datetime(2022, 7, 16, 16, 0, tzinfo=datetime.timezone.utc),
      'end_datetime': None,
      'price': 188.26,
      'source': 'rte-france.com',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'zoneKey': 'GB',
    }),
    dict({
      'currency': 'EUR',
      'datetime': datetime.datetime(2022, 7, 16, 17, 0, tzinfo=datetime.timezone.utc),
      'end_datetime': None,
      'price': 204.15,
      'source': 'rte-france.com',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'zoneKey': 'GB',
    }),
    dict({
      'currency': 'EUR',
      'datetime': datetime.datetime(2022, 7, 16, 18, 0, tzinfo=datetime.timezone.utc),
      'end_datetime': None,
      'price': 247.09,
      'source': 'rte-france.com',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'zoneKey': 'GB',
    }),
    dict({
      'currency': 'EUR',
      'datetime': datetime.datetime(2022, 7, 16, 19, 0, tzinfo=datetime.timezone.utc),
      'end_datetime': None,
      'price': 301.57,
      'source': 'rte-france.com',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'zoneKey': 'GB',
    }),
    dict({
      'currency': 'EUR',
      'datetime': datetime.datetime(2022, 7, 16, 20, 0, tzinfo=datetime.timezone.utc),
      'end_datetime': None,
      'price': 335.58,
      'source': 'rte-france.com',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'zoneKey': 'GB',
    }),
    dict({
      'currency': 'EUR',
      'datetime': datetime.datetime(2022, 7, 16, 21, 0, tzinfo=datetime.timezone.utc),
      'end_datetime': None,
      'price': 348.52,
      'source': 'rte-france.com',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'zoneKey': 'GB',
    }),
    dict({
      'currency': 'EUR',
      'datetime': datetime.datetime(2022, 7, 16, 22, 0, tzinfo=datetime.timezone.utc),
      'end_datetime': None,
      'price': 343.34,
      'source': 'rte-france.com',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'zoneKey': 'GB',
    }),
    dict({
      'currency': 'EUR',
      'datetime': datetime.datetime(2022, 7, 16, 23, 0, tzinfo=datetime.timezone.utc),
      'end_datetime': None,
      'price': 324.4,
      'source': 'rte-france.com',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'zoneKey': 'GB',
    }),
  ])
# ---
# name: test_fetch_production
  list([
    dict({
      'correctedModes': list([
      ]),
      'datetime': FakeDatetime(2024, 12, 16, 10, 0, tzinfo=zoneinfo.ZoneInfo(key='UTC')),
      'end_datetime': None,
      'production': dict({
        'biomass': 5.0,
        'coal': 0.0,
        'gas': 10.5,
        'hydro': 2.0,
        'nuclear': 8.0,
        'solar': 3.5,
        'unknown': 0.0,
        'wind': 13.5,
      }),
      'source': 'neso.energy, elexon.co.uk',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'storage': dict({
        'battery': -0.0,
        'hydro': -120.0,
      }),
      'zoneKey': 'GB',
    }),
    dict({
      'correctedModes': list([
      ]),
      'datetime': FakeDatetime(2024, 12, 16, 10, 30, tzinfo=zoneinfo.ZoneInfo(key='UTC')),
      'end_datetime': None,
      'production': dict({
        'biomass': 6.0,
        'coal': 1.0,
        'gas': 11.0,
        'hydro': 2.5,
        'nuclear': 8.0,
        'solar': 4.0,
        'unknown': 0.5,
        'wind': 15.0,
      }),
      'source': 'neso.energy, elexon.co.uk',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'storage': dict({
        'battery': -0.0,
        'hydro': -0.0,
      }),
      'zoneKey': 'GB',
    }),
  ])
# ---
# name: test_fetch_wind_solar_forecasts_day_ahead_historical
  list([
    dict({
      'correctedModes': list([
      ]),
      'datetime': datetime.datetime(2022, 7, 15, 23, 0, tzinfo=datetime.timezone.utc),
      'end_datetime': None,
      'production': dict({
        'wind': 7523.0,
      }),
      'source': 'neso.energy',
      'sourceType': <EventSourceType.forecasted: 'forecasted'>,
      'storage': dict({
      }),
      'zoneKey': 'GB',
    }),
    dict({
      'correctedModes': list([
      ]),
      'datetime': datetime.datetime(2022, 7, 15, 23, 30, tzinfo=datetime.timezone.utc),
      'end_datetime': None,
      'production': dict({
        'wind': 7656.0,
      }),
      'source': 'neso.energy',
      'sourceType': <EventSourceType.forecasted: 'forecasted'>,
      'storage': dict({
      }),
      'zoneKey': 'GB',
    }),
    dict({
      'correctedModes': list([
      ]),
      'datetime': datetime.datetime(2022, 7, 16, 0, 0, tzinfo=datetime.timezone.utc),
      'end_datetime': None,
      'production': dict({
        'wind': 7736.0,
      }),
      'source': 'neso.energy',
      'sourceType': <EventSourceType.forecasted: 'forecasted'>,
      'storage': dict({
      }),
      'zoneKey': 'GB',
    }),
  ])
# ---
# name: test_fetch_wind_solar_forecasts_day_ahead_live
  list([
    dict({
      'correctedModes': list([
      ]),
      'datetime': FakeDatetime(2024, 12, 16, 23, 0, tzinfo=datetime.timezone.utc),
      'end_datetime': None,
      'production': dict({
        'wind': 2732.0,
      }),
      'source': 'neso.energy',
      'sourceType': <EventSourceType.forecasted: 'forecasted'>,
      'storage': dict({
      }),
      'zoneKey': 'GB',
    }),
    dict({
      'correctedModes': list([
      ]),
      'datetime': FakeDatetime(2024, 12, 16, 23, 30, tzinfo=datetime.timezone.utc),
      'end_datetime': None,
      'production': dict({
        'wind': 2796.0,
      }),
      'source': 'neso.energy',
      'sourceType': <EventSourceType.forecasted: 'forecasted'>,
      'storage': dict({
      }),
      'zoneKey': 'GB',
    }),
    dict({
      'correctedModes': list([
      ]),
      'datetime': FakeDatetime(2024, 12, 17, 0, 0, tzinfo=datetime.timezone.utc),
      'end_datetime': None,
      'production': dict({
        'wind': 2882.0,
      }),
      'source': 'neso.energy',
      'sourceType': <EventSourceType.forecasted: 'forecasted'>,
      'storage': dict({
      }),
      'zoneKey': 'GB',
    }),
  ])
# ---
